--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,12 +1,17 @@
-﻿<Window x:Class="Packet_Sniffer.MainWindow"
+﻿<Window x:Name="window" x:Class="Packet_Sniffer.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Packet_Sniffer"
-        mc:Ignorable="d" ResizeMode="NoResize" Width="700">
-    <Grid Margin="0">
-        <DataGrid x:Name="dataGrid" VerticalAlignment="Top" Height="284" CanUserResizeRows="False" HeadersVisibility="Column" CanUserReorderColumns="False" CanUserResizeColumns="False" CanUserSortColumns="False" SelectionMode="Single" SelectionChanged="createPacketTree" IsReadOnly="True">
+        mc:Ignorable="d" ResizeMode="NoResize" UseLayoutRounding="False" Width="700" Height="540">
+    <Grid x:Name="grid" Margin="0" HorizontalAlignment="Center">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="0.55*"/>
+            <RowDefinition Height="0.35*"/>
+            <RowDefinition Height="0.1*"/>
+        </Grid.RowDefinitions>
+        <DataGrid x:Name="dataGrid" CanUserResizeRows="False" HeadersVisibility="Column" CanUserReorderColumns="False" CanUserResizeColumns="False" CanUserSortColumns="False" SelectionMode="Single" SelectionChanged="createPacketTree" IsReadOnly="True" HorizontalAlignment="Center" Margin="10,0">
             <DataGrid.CellStyle>
                 <Style TargetType="DataGridCell">
                     <Setter Property="BorderThickness" Value="0"/>
@@ -14,21 +19,27 @@
                 </Style>
             </DataGrid.CellStyle>
             <DataGrid.Columns>
-                <DataGridTextColumn x:Name="Number" Header="No." Binding="{Binding Number}" Width="35" CanUserResize="False"/>
-                <DataGridTextColumn x:Name="Time_Stamp" Header="Time Stamp" Binding="{Binding Time_Stamp}" CanUserResize="False" Width="80"/>
-                <DataGridTextColumn x:Name="Source" Header="Source" Binding="{Binding Source}" CanUserResize="False" Width="100"/>
-                <DataGridTextColumn x:Name="Destination" Header="Destination" Binding="{Binding Destination}" Width="100" CanUserResize="False"/>
-                <DataGridTextColumn x:Name="Protocol" Header="Protocol" CanUserResize="False" Width="55" Binding="{Binding Protocol}"/>
-                <DataGridTextColumn x:Name="Length" Header="Length" CanUserResize="False" Width="48" Binding="{Binding Length}"/>
-                <DataGridTextColumn x:Name="Info" Header="Info" CanUserResize="False" Width="276" Binding="{Binding Info}"/>
+                <DataGridTextColumn x:Name="Number" Header="No." Binding="{Binding Number}" Width="0.05*" CanUserResize="False"/>
+                <DataGridTextColumn x:Name="Time_Stamp" Header="Time Stamp" Binding="{Binding Time_Stamp}" CanUserResize="False" Width="0.12*"/>
+                <DataGridTextColumn x:Name="Source" Header="Source" Binding="{Binding Source}" CanUserResize="False" Width="0.15*"/>
+                <DataGridTextColumn x:Name="Destination" Header="Destination" Binding="{Binding Destination}" Width="0.15*" CanUserResize="False"/>
+                <DataGridTextColumn x:Name="Protocol" Header="Protocol" CanUserResize="False" Width="0.1*" Binding="{Binding Protocol}"/>
+                <DataGridTextColumn x:Name="Length" Header="Length" CanUserResize="False" Width="0.1*" Binding="{Binding Length}"/>
+                <DataGridTextColumn x:Name="Info" Header="Info" CanUserResize="False" Width="0.33*" Binding="{Binding Info}"/>
             </DataGrid.Columns>
         </DataGrid>
-        <Button x:Name="Start_Button" Content="Start" Click="Start_Button_Click" Margin="43,472,573,12.5"/>
-        <TreeView x:Name="treeView" HorizontalAlignment="Left" Height="172" Margin="0,284,0,0" VerticalAlignment="Top" Width="345" BorderBrush="Black"/>
-        <Border BorderBrush="Black" BorderThickness="1" HorizontalAlignment="Left" Height="172" VerticalAlignment="Top" Width="344" Margin="350,284,0,0">
-            <TextBlock x:Name="textBlock" Margin="5" TextWrapping="Wrap"/>
-        </Border>
-        <Label x:Name="interfaceLabel" Content="Choose Interface:" HorizontalAlignment="Left" Margin="225,470,0,0" VerticalAlignment="Top" Height="24" Width="125"/>
-        <ComboBox x:Name="interfaceSelector" HorizontalAlignment="Left" Margin="356,472,0,0" VerticalAlignment="Top" Width="268" />
+        <Grid Grid.Row="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="0.5*"/>
+                <ColumnDefinition Width="0.5*"/>
+            </Grid.ColumnDefinitions>
+            <TreeView x:Name="treeView" BorderBrush="Black" BorderThickness="1" Margin="10"/>
+            <Border BorderBrush="Black" BorderThickness="1" Margin="10" Padding="5" Grid.Column="1">
+                <TextBlock x:Name="textBlock" Margin="0" TextWrapping="Wrap"/>
+            </Border>
+        </Grid>
+        <Label x:Name="interfaceLabel" Content="Choose Interface:" HorizontalAlignment="Left" Margin="280,9,0,0" VerticalAlignment="Top" Height="24" Width="105" Grid.Row="2"/>
+        <ComboBox x:Name="interfaceSelector" HorizontalAlignment="Left" Margin="385,0,0,0" Width="268" Height="22" Grid.Row="2" />
+        <Button x:Name="Start_Button" Content="Start" Click="Start_Button_Click" Margin="48,0,0,0" Width="78" Height="22" Grid.Row="2" HorizontalAlignment="Left"/>
     </Grid>
 </Window>
