Everything is working except for updating the percentage if I change the buffer size and adding a button to clear the buffer!

--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -4,7 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Packet_Sniffer"
-        mc:Ignorable="d" ResizeMode="NoResize" UseLayoutRounding="False" Width="700" Height="640">
+        mc:Ignorable="d" ResizeMode="NoResize" UseLayoutRounding="False" Width="700" Height="640" Title="Packet Sniffer">
     <Grid x:Name="grid" Margin="0" HorizontalAlignment="Center">
         <Grid.RowDefinitions>
             <RowDefinition Height="0.08*"/>
@@ -58,12 +58,13 @@
             <RadioButton x:Name="asciiButton" Content="Ascii" Grid.Column="1" HorizontalAlignment="Left" Margin="158,215,0,0" VerticalAlignment="Top" IsChecked="True" Checked="asciiButton_Checked"/>
             <RadioButton x:Name="hexButton" Content="Hex" Grid.Column="1" HorizontalAlignment="Left" Margin="238,215,0,0" VerticalAlignment="Top" Checked="hexButton_Checked"/>
         </Grid>
-        <Label x:Name="interfaceLabel" Content="Choose Interface:" Margin="278,10,0,13" VerticalAlignment="Center" Height="24" Grid.Row="3" HorizontalAlignment="Left"/>
-        <ComboBox x:Name="interfaceSelector" HorizontalAlignment="Left" Margin="385,12,0,13" Width="268" Height="22" Grid.Row="3" />
-        <Button x:Name="Start_Button" Content="Start" Click="Start_Button_Click" Margin="48,12,0,13" Width="78" Height="22" Grid.Row="3" HorizontalAlignment="Left"/>
-        <TextBox x:Name="maxBufferText" Height="23" Margin="119,0,0,0" Text="1000" Width="48" HorizontalAlignment="Left" VerticalAlignment="Center" TextAlignment="Center" MaxLines="1" MaxLength="5" IsUndoEnabled="True" Padding="0" TextChanged="maxBufferText_TextChanged"/>
-        <ProgressBar x:Name="bufferProgress" HorizontalAlignment="Left" Height="23" Margin="330,10,0,0" VerticalAlignment="Top" Width="343" Maximum="{Binding maxBufferSize}"/>
-        <Label x:Name="maxBufferLabel" Content="Buffer Size:" HorizontalAlignment="Left" Margin="36,9,0,14" VerticalAlignment="Center"/>
-        <Label x:Name="maxBufferLabel_Copy" Content="Buffer Fill:" HorizontalAlignment="Left" Margin="238,10,0,13" VerticalAlignment="Center" Width="67"/>
+        <Label x:Name="interfaceLabel" Content="Choose Interface:" Margin="259,0,0,0" VerticalAlignment="Center" Height="24" Grid.Row="0" HorizontalAlignment="Left"/>
+        <ComboBox x:Name="interfaceSelector" HorizontalAlignment="Left" Margin="379,0,0,0" Width="268" Height="22" Grid.Row="0" VerticalAlignment="Center" />
+        <Button x:Name="Start_Button" Content="Start" Click="Start_Button_Click" Margin="48,0,0,0" Width="78" Height="22" HorizontalAlignment="Left" Background="LimeGreen" Grid.Row="0" VerticalAlignment="Center"/>
+        <TextBox x:Name="maxBufferText" Height="19" Margin="112,0,0,0" Text="1000" Width="48" HorizontalAlignment="Left" VerticalAlignment="Center" TextAlignment="Center" MaxLines="1" MaxLength="5" IsUndoEnabled="True" Padding="0" Grid.Row="3" KeyDown="maxBufferText_TextChanged" TextChanged="maxBufferText_TextLoaded"/>
+        <ProgressBar x:Name="bufferProgress" HorizontalAlignment="Left" Height="23" Margin="273,0,0,0" VerticalAlignment="Center" Width="352" Maximum="1000" Minimum="10" Grid.Row="3" />
+        <Label x:Name="maxBufferLabel" Content="Buffer Size:" HorizontalAlignment="Left" Margin="17,12,0,11" VerticalAlignment="Center" Grid.Row="3"/>
+        <Label x:Name="maxBufferLabel_Copy" Content="Buffer Fill:" HorizontalAlignment="Left" Margin="190,0,0,0" VerticalAlignment="Center" Width="67" Grid.Row="3"/>
+        <Label x:Name="percentLabel" HorizontalAlignment="Left" Margin="639,12,0,11" VerticalAlignment="Center" Content="0%" Grid.Row="3"/>
     </Grid>
 </Window>
